# CRM-TEST-BACKEND

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt  seed_demo_charts.py  vercel.json
migrations/: env.py
migrations/versions/: 0546a4ebd50c_update_tables_and_add_language_table.py  056fdf74b2f4_sync_all_model_changes.py  0db3b509dda8_added_claim_questionairess.py  1a2419bd4a97_sync_all_model_changes.py  2368a927a82e_sync_all_model_changes.py  24ed5fff34ee_add_created_at_and_updated_at_to_client_.py  2be1760b7e48_add_questionnaire_table.py  2cbe28dcbc31_sync_all_model_changes.py  4661edb1511d_added_witness_clumns.py  473e36ff398a_sync_all_model_changes.py  4d9cb5e37c10_sync_all_model_changes.py  54a49582d426_add_number_of_weekly_payments_to_fleet_.py  598e15b0a93f_vehicle_detail.py  60a0330d0e0d_sync_all_model_changes.py  62febded0f88_sync_all_model_changes.py  652f44db2673_sync_all_model_changes.py  69720ad9bac5_add_abi_bhr_charges.py  6b52775c282c_sync_all_model_changes.py  7061118c828f_ums_tables.py  7154d934b931_sync_all_model_changes.py  73417fda7e04_added_created_at_for_claim_.py  7346658a9075_sync_all_model_changes.py  7465f09c5043_sync_all_model_changes.py  7838ad9c3a62_sync_all_model_changes.py  873bd1e0a6f7_sync_all_model_changes.py  9413ec793948_sync_all_model_changes.py  950dd262a77d_claims_tables.py  96d86f337bc2_added_claim_questionaires.py  97ef69ec84c2_sync_all_model_changes.py  9b6b327ba50a_borough_and_third_party_table.py  9bc31e3726d4_sync_all_model_changes.py  9c152241b1ff_sync_all_model_changes.py  a15c56c314cf_sync_all_model_changes.py  a1b2c3d4e5f6_add_user_login_lockout.py  a330a267f706_sync_all_model_changes.py  a3e7b1d4c825_add_road_fund_licence.py  a4b5c6d7e8f9_add_comparison_agreed_rates.py  a69b15d8155b_sync_all_model_changes.py  a7b8c9d0e1f2_calendar_phase2.py  a8ad4eac0490_sync_all_model_changes.py  (+55 more)
scripts/: get_ms_graph_refresh_token.py  seed_dashboard_demo.py  sync-to-test.sh
src/: credentials.json  get_token.py  main.py
src/appflow/: logger.py  utils.py
src/appflow/models/: abi_bhr_charges.py  accident_detail.py  account_settings.py  address.py  authentication.py  calendar_event.py  case_activity.py  claims.py  client_detail.py  (+31 more)
src/fleet/: deps.py  router.py
src/libauth/: auth.py  token_util.py
src/libdata/: enums.py  settings.py
(+174 files in other folders)
