[tool.poetry]
name = "insurance-claim-backend"
version = "0.1.0"
description = ""
authors = ["Talha Mobin <talhamobin313@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.2.1"
email-validator = "^2.2.0"
fastapi = "^0.110.1"
anyio = "3.7.1"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
mangum = "^0.15.1"
SQLAlchemy = "^1.4.49"
sqlalchemy-utils = "^0.41.2"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
alembic = "^1.13.1"
psycopg2-binary = "^2.9.10"
barcode = "^1.0.4"
python-barcode = {extras = ["pillow"], version = "^0.15.1"}
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"

# Pin torch and related libraries to versions compatible with macOS + Python 3.11
torch = "2.2.2"
torchvision = "0.17.2"
torchaudio = "2.2.2"
easyocr = {extras = ["standard"], version = "^1.7.2"}

opencv-python-headless = "<4.10.0.84"
pdfplumber = "^0.11.7"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
pymupdf = "^1.26.4"
numpy = "^2.0.0"
python-docx = "^1.2.0"
sendgrid = "^6.12.5"
weasyprint = "^66.0"
inference-sdk = "0.58.0"
openpyxl = "^3.1.5"
gunicorn = "^23.0.0"
